Added production data to phploy

--- a/phploy.ini
+++ b/phploy.ini
@@ -6,13 +6,13 @@
 
 
 ; The special '*' configuration is shared between all other configurations (think include)
-[staging]
-    scheme = sftp
-    host = 46.101.150.176
-    path = "public_html/wp-content/plugins/wpmo"
-    port = 22
-    user = decocratedclone
-    pass = "#P9Wjinn59G1^nz8v^c"
+[production]
+    scheme = ftp
+    host = ftp.decocrated.com
+    path = "wp-content/plugins/wpmo"
+    port = 21
+    user = "wpmastery@decocrated.com"
+    pass = "ayIbUFti4m9#vA3^U5"
 
 [wpm_staging]
     scheme = sftp
